Fix GnuCash importer to import currencies

Support currencies that are stored with
  <cmdty:space>CURRENCY</cmdty:space>
in addition to ones stored with
  <cmdty:space>ISO4217</cmdty:space>.

Also, only load those currencies that are used in the GnuCash file.

BUG: 409098
FIXED-IN: 5.0.5